--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>亲爱的小李</title>	    
+	<title></title>	    
     <link type="text/css" rel="stylesheet" href="css/default.css">
 		
 	<script type="text/javascript" src="js/jquery.min.js"></script>
@@ -36,7 +36,7 @@
             <div id="text">
 		        <div id="code">
 		      		<font color="#FF0000">  	
-		      			<span class="say">亲爱的小李，我爱你，虽然你看不见我对你的告白</span><br>
+		      			<span class="say">我爱你，虽然你看不见我对你的告白</span><br>
 						<span class="say"></span><br>
 						<span class="say">我知道我不会甜言蜜语，但是我会用行动证明一切</span><br>
 						<span class="say"></span><br>
@@ -47,7 +47,7 @@
             </div>
 		    <div id="clock-box">
 		        <span class="STYLE1"></span>
-		        <font color="#33CC00">亲爱的小李，我爱你</font>
+		        <font color="#33CC00">我爱你</font>
 				<span class="STYLE1">已经是……</span>
 		        <div id="clock"></div>
 		    </div>
